--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -83,12 +83,7 @@
 					<a href="/mobile/user/my_gene">
 						<!--<img src="__STATIC__/img/home/anniu@2x.png">-->
 							<span>基因查询</span>
-							<img src="__STATIC__/img/home/anniu@2x.png"  style="width: .4rem;height: .4rem;display: inline-block;margin-left: .7rem;
-								
-								
-								
-								
-								"/>
+							<img src="__STATIC__/img/home/anniu@2x.png"  style="width: .4rem;height: .4rem;display: inline-block;margin-left: .7rem;"/>
 					</a>
 				</div>
 				</div>
