--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -116,13 +116,17 @@
 				{/if}
 				{if condition="isset($article)"}
 					<div class="nscramble-wrap">
-						<div class="title">
+						{if condition="isset($article.recom) && $article.recom"}
+						
+						<div class="nscramble-list">
+							<div class="title">
 							<h3>微解读</h3>
 							<!--<a href="#"><span class="more">查看全部{$article_count}项</span></a>-->
+						    </div>
+						    <br/>
 						</div>
-						{if condition="isset($article.recom) && $article.recom"}
-						<div class="nscramble-list">
-						{volist name="article.recom" id="vo"}
+						<div class="hhhhhhh">
+							{volist name="article.recom" id="vo"}
 							<li class="nscrambleItem" style="overflow: hidden; width:2.2rem;height:1.6rem;">
 								<a href="/mobile/article/details?id={$vo.id}"> 
 									<img style="width:2.2rem;height: 1.6rem;" src="__IMAGES__article/{$vo.thumb}" />
@@ -130,6 +134,7 @@
 								</a>
 							</li>
 						{/volist}
+						</div>
 						</div>
 						{/if} 
 					</div>
