--- a/public/static/mobile/css/public/public_head.css
+++ b/public/static/mobile/css/public/public_head.css
@@ -14,7 +14,7 @@
 	text-align: center;
 	color: #fefefe;
 	letter-spacing: .02rem;
-	background-color: #37afe6;
+	background-color: #e3e3e3;
 } 
 /*头部 底部线*/
 .lb_headWrap_line {
