--- a/application/mobile/view/article/example.html
+++ b/application/mobile/view/article/example.html
@@ -11,11 +11,11 @@
 		<link rel="stylesheet" type="text/css" href="__STATIC__/css/example/example.css"/>
 	</head>
 	<body>
-		<div class="wrap_frame">
+		<div class="frame">
 			<!--public head-->
-			<div class="lb_headWrap">
+			<!--<div class="lb_headWrap">
 				<span>示例报告</span>
-			</div>
+			</div>-->
 			<div class="report">
 				<!--主题图片-->
 				{if condition="isset($recom)"}
