--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -27,15 +27,22 @@
 .employ .use1 {
     color: #89b8ce;
 }
+.swiper-container{
+	height: 6rem;
+}
+.swiper-slide img{
+	width: 100%;
+	height: 100%;
+}
 </style>
 	<body>
 		<div class="wrap_frame">
 			<!-- header -->
-			<div class="lb_headWrap ">
+			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/goods/goodsList'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
 				</p>
-				<span>详情</span>
+				<!--<span>详情</span>-->
 				<!--<p class="lb_headWrap_text">领取产品</p>-->
 			</div>
 			<!-- main -->
