--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -21,7 +21,7 @@
 
 				<!-- 搜索 -->
 				<!--<div class="search">-->
-					<p style="text-align: center;heigit:0.88rem;line-height: 0.88rem;color:#fff;font-size: 16px;background: #e3e3e3;">首页</p>
+					<!--<p style="text-align: center;heigit:0.88rem;line-height: 0.88rem;color:#fff;font-size: 16px;background: #e3e3e3;">首页</p>-->
 					<!-- <form action="#">
 						<input class="search-input" type="text">
 						<button class="search-btn">搜索</button>
@@ -127,9 +127,9 @@
 						</div>
 						<div class="hhhhhhh">
 							{volist name="article.recom" id="vo"}
-							<li class="nscrambleItem" style="overflow: hidden; width:2.2rem;height:1.6rem;">
+							<li class="nscrambleItem" style="overflow: hidden; width:2.5rem;height:2.5rem;">
 								<a href="/mobile/article/details?id={$vo.id}"> 
-									<img style="width:2.2rem;height: 1.6rem;" src="__IMAGES__article/{$vo.thumb}" />
+									<img style="width:2.5rem;height: 2.5rem;" src="__IMAGES__article/{$vo.thumb}" />
 									<span class="mask"></span>
 								</a>
 							</li>
