--- a/public/static/mobile/css/home/index.css
+++ b/public/static/mobile/css/home/index.css
@@ -344,3 +344,15 @@ body{
 .question-list li .img-wrap img{
     width: 1.4rem;
 }
+.swiper-container{
+	height: 3.7rem;
+}
+.swiper-slide img{
+	width: 100%;
+	height: 100%;
+}
+.nscrambleItem a{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+}
