基因首页样式改变

--- a/application/mobile/view/article/details.html
+++ b/application/mobile/view/article/details.html
@@ -14,12 +14,12 @@
 	<body>
 		<div class="wrap_frame">
             <!-- 头部 -->
-            <div class="lb_headWrap">
+            <div class="lb_headWrap" >
                 <p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-                    <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+                    <img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
                 </p>
                 
-                <span class="publicEllipsis" style="display:inline-block;width:80%;">{$info.title}</span>
+                <span class="publicEllipsis" style="display:inline-block;width:80%; color: black;">{$info.title}</span>
             </div>
             
             <!-- 详情 -->
