--- a/application/mobile/view/comment/comment.html
+++ b/application/mobile/view/comment/comment.html
@@ -53,7 +53,7 @@
         <!-- 头部 -->
         <div class="lb_headWrap">
             <p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-                <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
+                <img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
             </p>
             <span>评论</span>
         </div>
