--- a/application/mobile/view/goods/jifen_goods_list.html
+++ b/application/mobile/view/goods/jifen_goods_list.html
@@ -18,9 +18,9 @@
     <div class="wrap_frame">
         <!-- header -->
         <div class="lb_headWrap">
-            <!--<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-                         <img class="lb_headWrap_return_img" src=".__STATIC__img/public/"/> 
-                    </p>-->
+            <p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+                         <img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/> 
+                    </p>
             <span>购买</span>
             <!--<p class="lb_headWrap_text">领取产品</p>-->
         </div>
