--- a/application/mobile/view/user/collection.html
+++ b/application/mobile/view/user/collection.html
@@ -15,7 +15,7 @@
 				<!--public head-->
 				<div class="lb_headWrap" style="position: relative; ">
 					<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-						<img class="lb_headWrap_return_img" src="__STATIC__/img/public/bottom_nav/back@2x.png"/>
+						<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 					</p>
 					<span>我的收藏</span>
 				</div>
