--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -16,10 +16,10 @@
 	</head>
 
 	<body>
-		<div class="wrap_frame">
-			<div class="lb_headWrap ">
-				<span>我的</span>
-			</div>
+		<div class="rame">
+			<!--<div class="lb_headWrap ">-->
+				<!--<span>我的</span>-->
+			<!--</div>-->
 
 			<!--头像区域-->
 			<div class="my_pic">
