--- a/application/mobile/view/user/my_information.html
+++ b/application/mobile/view/user/my_information.html
@@ -16,7 +16,7 @@
 	        <!-- 头部 -->
 	       <div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" onclick="returnFun()" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" onclick="returnFun()" />
 					<span class="lb_headWrap_return_img22" style="display: none;">取消</span>
 					
 				</p>
