--- a/application/mobile/view/user/qr_code.html
+++ b/application/mobile/view/user/qr_code.html
@@ -34,7 +34,7 @@
 			 <!-- 头部 -->
 			 <div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 				<span>我的分享二维码</span>
 				<a class="Update_image" onclick="javascript:location.href='/mobile/user/qr_code?u=1'">更新</a>
