--- a/public/static/mobile/css/purchase/purchase.css
+++ b/public/static/mobile/css/purchase/purchase.css
@@ -53,7 +53,7 @@ body{
 }
 .purchase_list .item-img>img{
     height: 2.64rem;
-    width: 100%;
+    width: 2.64rem;
 }
 .purchase_list .item-msg{
     height: 2.64rem;
