--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -20,7 +20,7 @@
                 {else /}
                 <p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='{:url('goods/jifen_goodinfo','',false)}/id/{$info.id}'">
                 {/if}
-                    <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+                    <img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
                 </p>
                    <span>确认订单</span>
                </div>
