--- a/application/mobile/view/goods/jifen_goodinfo.html
+++ b/application/mobile/view/goods/jifen_goodinfo.html
@@ -33,7 +33,7 @@
 			<!-- header -->
 			<div class="lb_headWrap ">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
 				</p>
 				<span>详情</span>
 				<!--<p class="lb_headWrap_text">领取产品</p>-->
