--- a/application/mobile/view/index/edit_password.html
+++ b/application/mobile/view/index/edit_password.html
@@ -20,7 +20,7 @@
 			<!--public head-->
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/set_up'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 				<span>重置密码</span>
 			</div>
