--- a/application/mobile/view/user/add_address.html
+++ b/application/mobile/view/user/add_address.html
@@ -20,7 +20,7 @@
 			<!--public head-->
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 				<span>添加地址</span>
 				<!--<p class="lb_headWrap_text">领取产品</p>-->
