--- a/application/mobile/view/user/edit_wxaccount.html
+++ b/application/mobile/view/user/edit_wxaccount.html
@@ -125,7 +125,7 @@
 			<!--public head-->
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/set_up'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
 				</p>
 				<span>微信绑定</span>
 			</div>
