--- a/application/mobile/view/user/my_address.html
+++ b/application/mobile/view/user/my_address.html
@@ -16,7 +16,7 @@
 		<div class="wrap_frame">
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='{$return}'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 				<span>我的地址</span>
 			</div>
