--- a/application/mobile/view/user/set_up.html
+++ b/application/mobile/view/user/set_up.html
@@ -28,7 +28,7 @@
 			<!-- 头部 -->
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
 				</p>
 				<span>设置</span>
 			</div>
