--- a/application/mobile/view/user/set_withdrawal_account.html
+++ b/application/mobile/view/user/set_withdrawal_account.html
@@ -53,7 +53,7 @@
 			
 			<div class="lb_headWrap ">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/withdrawal'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 				<span>设置提现账号</span>
 			</div>
