--- a/application/mobile/view/user/top_up.html
+++ b/application/mobile/view/user/top_up.html
@@ -21,7 +21,7 @@
 			<!--public head-->
 			<div class="lb_headWrap lb_headWrap_bacColor topBox_backgroundColor ">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
 				</p>
 				<span>账户充值</span>
 			</div>
