--- a/application/mobile/view/user/withdrawal.html
+++ b/application/mobile/view/user/withdrawal.html
@@ -20,7 +20,7 @@
 			<div class="sec">
 			<div class="lb_headWrap lb_headWrap_bacColor topBox_backgroundColor ">
 				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/my_walet'">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 				<span>申请提现</span>
 			</div>
