--- a/public/static/mobile/css/home/index.css
+++ b/public/static/mobile/css/home/index.css
@@ -339,10 +339,12 @@ body{
 }
 .question-list li .img-wrap{
     width: 1.4rem;
+    height: 1.4rem;
     margin-left: .5rem;
 }
 .question-list li .img-wrap img{
     width: 1.4rem;
+    height: 1.4rem;
 }
 .swiper-container{
 	height: 3.7rem;
@@ -355,4 +357,7 @@ body{
 	display: inline-block;
 	width: 100%;
 	height: 100%;
+}
+.question-wrap{
+	margin-bottom: .5rem;
 }
