--- a/application/mobile/view/goods/goods_list.html
+++ b/application/mobile/view/goods/goods_list.html
@@ -30,8 +30,8 @@
              {volist name="list" id="vo" empty="<p style='height:75px;line-height:75px;text-align: center;'>暂无数据！</p>"}
             <div class="purchase_list">
                 <div class="item-img">
-                    <!--<img src="__IMAGES__goods/{$vo.thumb}" alt="">-->
-                    	<img src="/mobile-default-user-icon.png" />
+                    <img src="__IMAGES__goods/{$vo.thumb}" alt="">
+                    	<!-- <img src="/mobile-default-user-icon.png" /> -->
                 </div>
                 <div class="item-msg">
                     <p class="item_title">{$vo.name}</p>
