基因首页样式改变

--- a/application/mobile/view/goods/jifen_goodinfo.html
+++ b/application/mobile/view/goods/jifen_goodinfo.html
@@ -27,6 +27,13 @@
 .employ .use1 {
     color: #89b8ce;
 }
+.swiper-container{
+	height: 6rem;
+}
+.swiper-container img{
+	height: 100%;
+	width: 100%;
+}
 </style>
 	<body>
 		<div class="wrap_frame">
