--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -15,9 +15,9 @@
         <form method="POST" target="ajaxR" id="form">
 		<div class="wrap_frame">
 			<!--public head-->
-			<div class="lb_headWrap">
+			<div class="lb_headWrap" style="background: #F5F5F5;color: black;">
 				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/bottom_nav/back@2x.png" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" />
 				</p>
 				<span>上传数据</span>
 			</div>
@@ -189,6 +189,7 @@
           </form>
 		<iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.js"></script>
+		<script type="text/javascript" src="__STATIC__/js/public/public.js" ></script>
         <!-- <script type="text/javascript" src="__STATIC__/js/public/public.js"></script> -->
         <script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
 		<script>
