手机端基因首页底部样式改变

--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -11,6 +11,13 @@
 		<link rel="stylesheet" href="__STATIC__/css/public/bottom_nav.css" />
 		<link rel="stylesheet" href="__STATIC__/css/home/index.css">
 		<link rel="stylesheet" href="__STATIC__/css/public/bottom_nav.css" />
+		<style>
+			.bottomNavWrap{
+				height:1.15rem!important;
+				display: flex;
+				align-items: center;
+			}
+		</style>
 
 	</head>
 
