--- a/application/mobile/view/weixin/jsapi_recharge.html
+++ b/application/mobile/view/weixin/jsapi_recharge.html
@@ -67,12 +67,12 @@
 		    jsApiCall();
 		}
 	}
-
-    window.onload = function(){ 
-        setTimeout(function(){
-            jsApiCall();
-        },1500);
-    }
+	jsApiCall();
+    // window.onload = function(){ 
+    //     setTimeout(function(){
+            
+    //     },1500);
+    // }
 	</script>
 	<script type="text/javascript">
 	//获取共享地址
