--- a/application/mobile/view/weixin/jsapi_orderpay.html
+++ b/application/mobile/view/weixin/jsapi_orderpay.html
@@ -75,11 +75,13 @@
 		}
 	}
 
-    window.onload = function(){ 
-        setTimeout(function(){
-            jsApiCall();
-        },1500);
-    }
+	jsApiCall();
+
+    // window.onload = function(){ 
+    //     setTimeout(function(){
+            
+    //     },1500);
+    // }
 	</script>
 	<script type="text/javascript">
 	//获取共享地址
