--- a/application/mobile/view/weixin/jsapi_orderpay.html
+++ b/application/mobile/view/weixin/jsapi_orderpay.html
@@ -3,8 +3,8 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
 	<title>订单支付</title>
-	<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
-	<script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
+	<!-- <script src="__STATIC__/js/public/jquery-1.8.3.js"></script> -->
+	<!-- <script type="text/javascript" src="/public/static/public/layer/layer.js"></script> -->
 	<script type="text/javascript">
     var sn = "{$sn}";
     var order_id = "{$order_id}";
